--- a/index.html
+++ b/index.html
@@ -197,40 +197,22 @@
 
         /* Card Modernizado com Imagem */
         .category-card {
-            background: var(--bg-card);
+            background: #fff;
             border-radius: var(--radius-lg);
             position: relative;
             display: flex;
             flex-direction: column;
             transition: var(--transition);
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.04);
-            border: 1px solid rgba(255, 255, 255, 0.7);
+            border: 1px solid rgba(0, 0, 0, 0.05);
             aspect-ratio: 1/1;
             overflow: hidden;
-            background-size: cover;
-            background-position: center;
-        }
-
-        .category-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.95) 70%);
-            transition: var(--transition);
-            z-index: 0;
         }
 
         .category-card:hover {
             transform: translateY(-5px);
             box-shadow: 0 12px 30px rgba(0, 0, 0, 0.08);
             border-color: var(--accent);
-        }
-
-        .category-card:hover::before {
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0.9) 100%);
         }
 
         /* Link Principal (Pesquisa) */
@@ -321,11 +303,10 @@
 
         .category-name {
             font-size: 13px;
-            font-weight: 700;
+            font-weight: 600;
             line-height: 1.3;
             color: var(--text-main);
             text-align: center;
-            text-shadow: 0 1px 2px rgba(255, 255, 255, 0.8);
         }
 
         /* Botão do Mapa (Ação Secundária) */
@@ -506,7 +487,8 @@
                     { name: { pt: "Agência", en: "Travel Agency", es: "Agencia" }, icon: "palmtree", q: { pt: "Agência de Viagens", en: "Travel Agency", es: "Agencia de viajes" } },
                     { name: { pt: "Cinema", en: "Cinema", es: "Cine" }, icon: "film", q: { pt: "Cinema", en: "Movie theater", es: "Cine" } },
                     { name: { pt: "Teatro", en: "Theater", es: "Teatro" }, icon: "ticket", q: { pt: "Teatro", en: "Theater", es: "Teatro" } },
-                    { name: { pt: "Parque", en: "Park", es: "Parque" }, icon: "trees", q: { pt: "Parque", en: "Public park", es: "Parque" } }
+                    { name: { pt: "Parque", en: "Park", es: "Parque" }, icon: "trees", q: { pt: "Parque", en: "Public park", es: "Parque" } },
+                    { name: { pt: "Bicicletaria", en: "Bike Shop", es: "Bicicletería" }, icon: "bike", q: { pt: "Bicicletaria", en: "Bike Shop", es: "Tienda de bicicletas" } }
                 ]
             },
             {
@@ -536,8 +518,11 @@
                 labels: { pt: "Automotivo", en: "Automotive", es: "Automotriz" },
                 items: [
                     { name: { pt: "Oficina", en: "Repair Shop", es: "Taller" }, icon: "settings", q: { pt: "Oficina Mecânica", en: "Auto Repair Shop", es: "Taller mecánico" } },
+                    { name: { pt: "Oficina Motos", en: "Motorcycle Repair", es: "Taller de Motos" }, icon: "wrench", q: { pt: "Oficina de Motos", en: "Motorcycle Repair Shop", es: "Taller de motos" } },
+                    { name: { pt: "Moto Peças", en: "Motorcycle Parts", es: "Repuestos Motos" }, icon: "package", q: { pt: "Loja de Moto Peças", en: "Motorcycle Parts Store", es: "Tienda de repuestos para motos" } },
                     { name: { pt: "Auto Center", en: "Auto Center", es: "Auto Center" }, icon: "wrench", q: { pt: "Auto Center", en: "Auto Center", es: "Centro automotriz" } },
                     { name: { pt: "Auto Peças", en: "Auto Parts", es: "Repuestos" }, icon: "package", q: { pt: "Loja de Auto Peças", en: "Auto Parts Store", es: "Tienda de repuestos" } },
+                    { name: { pt: "Pneus Carro/Moto", en: "Tires Car/Moto", es: "Neumáticos" }, icon: "circle-dot", q: { pt: "Loja de Pneus", en: "Tire Shop", es: "Tienda de neumáticos" } },
                     { name: { pt: "Borracharia", en: "Tire Shop", es: "Vulcanizadora" }, icon: "car-front", q: { pt: "Borracharia", en: "Tire Repair Shop", es: "Taller de neumáticos" } },
                     { name: { pt: "Auto Elétrica", en: "Auto Electric", es: "Auto Eléctrica" }, icon: "zap", q: { pt: "Auto Elétrica", en: "Auto Electrician", es: "Electricista automotriz" } },
                     { name: { pt: "Auto Vidros", en: "Auto Glass", es: "Lunas" }, icon: "scan", q: { pt: "Loja de Auto Vidros", en: "Auto Glass Shop", es: "Taller de lunas" } },
@@ -642,8 +627,7 @@
                 const mapsLink = `https://www.google.com/maps/search/${searchQuery}`;
 
                 return `
-                            <div class="category-card" data-search="${item.name[currentLang].toLowerCase()}" 
-                                 style="background-image: url('https://images.unsplash.com/photo-${getImgId(item.q.en)}?auto=format&fit=crop&q=60&w=300')">
+                            <div class="category-card" data-search="${item.name[currentLang].toLowerCase()}">
                                 <!-- Botão Secundário para Pesquisa no Google -->
                                 <a href="${googleLink}" target="_blank" class="card-maps-btn" title="Buscar no Google">
                                     <i data-lucide="search"></i>
@@ -662,82 +646,7 @@
             lucide.createIcons();
         }
 
-        function getImgId(query) {
-            const ids = {
-                'Pharmacy': '1585435062873-1f2969de1f53',
-                'Hospital': '1519494140681-8b17d8121f45',
-                'Health Center': '1516549655169-df83a0774514',
-                'Dentist': '1606811841689-23dfddce2e95',
-                'Gym': '15344383272d6-411f12253ef3',
-                'Medical Clinic': '1519494091449-5989d673bc55',
-                '24h Emergency Room': '1586773860418-d339d1c750b2',
-                'Bakery': '1509440159596-0249088772ff',
-                'Supermarket': '1542838132-92c53300491e',
-                'Restaurant': '1517248135467-4c7edcad34c4',
-                'Pizzeria': '1513104890138-7c749659a591',
-                'Diner': '1467453272184-d1c71f820d71',
-                'Butcher Shop': '1602491453631-e2a5ad90a003',
-                'Liquor Store': '1510812431401-41d2bd2722f3',
-                'Bank ATM': '1569025690766-4a008c3819b1',
-                'Post Office': '1566835069720-61877402662c',
-                'Lottery Shop': '1614064506894-6d9b04870020',
-                'Law Firm': '1589829085444-42c8dd96f81b',
-                'Notary Public': '1505663912287-f23594cd3983',
-                'Locksmith': '1587574293836-7476839353ec',
-                'Shopping Mall': '1567401804135-2436dca061dc',
-                'Outlet store': '1441984904033-2ed9efd7ae31',
-                'Shopping Gallery': '1481437642641-3f121dfbfee1',
-                'Hotel': '1566073771279-6372540d8360',
-                'Travel Agency': '1436491865333-57c30cec9928',
-                'Movie theater': '14895991122aa-7181fcd9098e',
-                'Theater': '1513106593422-834bc104fa23',
-                'Public park': '1519331378117-0c07c72f1af3',
-                'Bus Stop': '1544620347-c0fd35a7334e',
-                'Parking Lot': '1470770903674-8914016339aa',
-                'Gas Station': '1527010150244-64e43dfe7d3f',
-                'Taxi Stand': '1490653311019-ecbd114296ca',
-                'Shipping Company': '1586528116311-db99ec93532f',
-                'Veterinary Clinic': '1606425271317-0efc0294c63f',
-                'Pet Shop': '1516734212104-12932782ca74',
-                'Agriculture Store': '1500382017326-7781ee00ca32',
-                'Pet Food Store': '1583511655913-3561337b8fd2',
-                'Pet Grooming': '1516734212104-12932782ca74',
-                'Auto Repair Shop': '1486269550731-f928e30b80df',
-                'Auto Center': '1554225722-daec540be6d3',
-                'Auto Parts Store': '1598300188055-30fd63004a43',
-                'Tire Repair Shop': '1540061384033-4f96d66e5f14',
-                'Auto Electrician': '1581094771184-dfbf7eeb9983',
-                'Auto Glass Shop': '1605153322055-f7d0620711cc',
-                'Body and Paint Shop': '1599256621779-2af4139cf06b',
-                'Car Audio Shop': '1616422285624-0735e5140dac',
-                'Car Battery Shop': '1544654311-408922579b29',
-                'Phone Store': '1511700994444-23ee332df26c',
-                'Computer Store': '1591799298444-0a8178824d8b',
-                'IT Support Service': '1581094771184-dfbf7eeb9983',
-                'Electronics Store': '1550009158-bc30e9223acc',
-                'Video Game Store': '1493711662056-b042a2d3cbaf',
-                'School': '1503673019035-afef2ac73d4d',
-                'University': '1541339946-ff6269d78a84',
-                'Language School': '1456518563068-151216a8c3d0',
-                'Technical Course': '1581094771184-dfbf7eeb9983',
-                'Furniture Store': '1524758658ed5-2a3a920977c3',
-                'Hardware Store': '1530124395689-0262a9307262',
-                'Construction Supply': '1504917595213-d62199ac6104',
-                'Real Estate Agency': '1560518883-ce09059ee7fa',
-                'Paint Store': '1589939703632-45e0468af6fa',
-                'Barbershop': '1503951914875-452162a0f8bf',
-                'Beauty Salon': '1520194100-282402e9d520',
-                'Nail Salon': '1519014816159-95286a0344d9',
-                'Esthetics Clinic': '1512290923412-eb30a240c60b',
-                'Church': '1448375535560-6c9f6f60c5a2',
-                'Temple': '1545153997-ec59a721bd79',
-                'Catholic Church': '1531749668029-2db88e4276c7',
-                'Evangelical Church': '1515162305285-0293e4767cc2',
-                'Spiritist Center': '1506126613408-eca07ce68773',
-                'Community Center': '1517486808442-7efc464e837f'
-            };
-            return ids[query] || '1449824913935-59a10b8d2000';
-        }
+
 
         document.getElementById('searchInput').addEventListener('input', (e) => {
             const term = e.target.value.toLowerCase();
