--- a/index.html
+++ b/index.html
@@ -574,9 +574,10 @@
                 labels: { pt: "Educação", en: "Education", es: "Educación" },
                 items: [
                     { name: { pt: "Escola", en: "School", es: "Escuela" }, icon: "school", q: { pt: "Escola", en: "School", es: "Escuela" } },
-                    { name: { pt: "Faculdade", en: "University", es: "Facultad" }, icon: "university", q: { pt: "Faculdade", en: "University", es: "Universidad" } },
+                    { name: { pt: "Faculdade", en: "College", es: "Facultad" }, icon: "book", q: { pt: "Faculdade", en: "College", es: "Facultad" } },
                     { name: { pt: "Idiomas", en: "Languages", es: "Idiomas" }, icon: "languages", q: { pt: "Curso de Idiomas", en: "Language School", es: "Escuela de idiomas" } },
-                    { name: { pt: "Técnico", en: "Technical", es: "Técnico" }, icon: "graduation-cap", q: { pt: "Curso Técnico", en: "Technical Course", es: "Curso técnico" } }
+                    { name: { pt: "Técnico", en: "Technical", es: "Técnico" }, icon: "graduation-cap", q: { pt: "Curso Técnico", en: "Technical Course", es: "Curso técnico" } },
+                    { name: { pt: "Universidade", en: "University", es: "Universidad" }, icon: "university", q: { pt: "Universidade", en: "University", es: "Universidad" } }
                 ]
             },
             {
@@ -609,6 +610,7 @@
                     { name: { pt: "Igreja", en: "Church", es: "Iglesia" }, icon: "church", q: { pt: "Igreja", en: "Church", es: "Iglesia" } },
                     { name: { pt: "Igreja Católica", en: "Catholic Church", es: "Iglesia Católica" }, icon: "cross", q: { pt: "Igreja Católica", en: "Catholic Church", es: "Iglesia Católica" } },
                     { name: { pt: "Igreja Evang.", en: "Evangelical Church", es: "Iglesia Evangélica" }, icon: "music", q: { pt: "Igreja Evangélica", en: "Evangelical Church", es: "Iglesia Evangélica" } },
+                    { name: { pt: "ONG", en: "NGO", es: "ONG" }, icon: "heart-handshake", q: { pt: "ONG", en: "NGO", es: "ONG" } },
                     { name: { pt: "Templo", en: "Temple", es: "Templo" }, icon: "landmark", q: { pt: "Templo", en: "Temple", es: "Templo" } }
                 ]
             }
